hphp/hack/test/typecheck/expression_trees/dict_error.php.exp
File "dict_error.php", line 59, characters 3-11:
The values of this `dict` are incompatible (Typing[4110])
  File "dict_error.php", line 12, characters 33-78:
  Expected `Spliceable<DictError, mixed, _>`
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
File "dict_error.php", line 61, characters 10-14:
This value cannot be inserted (spliced) into a `DictError` expression tree (Typing[4110])
  File "dict_error.php", line 52, characters 5-45:
  Expected `Spliceable<DictError, DictError::TAst, T>` because you are splicing into a `DictError` expression or block
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
  File "dict_error.php", line 61, characters 12-13:
  Hack values need to be converted (lifted) to compatible types before splicing. For more information see: https://docs.hhvm.com/hack/expression-trees/splicing
File "dict_error.php", line 61, characters 12-13:
Invalid argument (Typing[4110])
  File "dict_error.php", line 52, characters 5-45:
  Expected `Spliceable<DictError, mixed, _>`
  File "dict_error.php", line 58, characters 15-24:
  But got `ExampleInt`
